[tool.poetry]
name = "pyvolleydata"
version = "0.1.0"
description = "Extract and analyze volleyball data from set volleyball leagues."
authors = ["Ryan Du"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
