[tool.poetry]
name = "pyvolleydata"
version = "0.1.2"
description = "Extract and analyze volleyball data from the pvf and lovb volleyball leagues."
authors = ["Ryan Du"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"


[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Documentation" = "https://pyvolleydata.readthedocs.io/en/latest/index.html"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3"
furo = "^2024.8"
myst-parser = "^3.0"
sphinx-autodoc-typehints = "^2.1"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6"
